updated analysis part
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9489 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/data_table.tex
+++ b/2013/1km paper/data_table.tex
@@ -7,14 +7,12 @@
 
 
 \begin{table*}
-\vskip-5mm
 \caption{%
 The elastic differential cross-section as determined in this analysis. The representative point of a bin gives the $t$ value suitable for fitting \cite{lafferty94}.
 %uncertainty due to different fit models negligible:$10^{-7}\un{GeV^2}$
-For the differential cross-section, its value, statistical and systematic uncertainty (including all sources) are reported, followed by details of the leading systematic contributions: normalisation, optics imperfections (two eigenvectors of covariance matrix for factors scaling $\theta_x^*$ and $\theta_y^*$), beam momentum offset and residual misalignment (horizontal and vertical). Given these vectors $\vec v_i$, the covariance matrix of the differential cross-section can be constructed as $\sum \vec v_i \vec v_i^{\rm T}$.
+For the differential cross-section, its value, statistical and systematic uncertainty (including all sources) are reported, followed by details of the leading systematic contributions (see Figure \ref{fig:syst unc} and Section \ref{sec:final data merging}).
 \todo{UPDATE points at the end}
 }
-\vskip-3mm
 \label{tab:data}
 \begin{center}
 \small
@@ -99,8 +97,6 @@ $0.0492\S\S$ & $0.0510\S\S$ & $0.0501\S\S$ & $\S200.\S\S$ & $\S\S2.95$ & $\S8.17
 
 
 \begin{table*}
-\vskip-5mm
-\vskip-3mm
 \label{tab:data_ext}
 \begin{center}
 \todo{UPDATE points at the end}
