--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -8,7 +8,12 @@ irrelevant.
 %----------------------------------------------------------------------------------------------------
 \subsection{Event reconstruction}
 
-\todo{Short introduction - anticipate the argument flow; text below into a subsection}
+Event kinematics is determined from track hits in RPs (after proper alignment, see Sec.~\ref{sec:alignment}) using the LHC optics (see Sec.~\ref{sec:optics}).
+
+%------------------------------
+
+\subsubsection{Kinematics determination}
+\label{sec:kinematics}
 
 The protons' kinematics is first reconstructed separately in each arm, using formulae that optimise the robustness against imperfections (predominantly optics):
 %guide for reconstruction formulae = robustness against error sources: beam divergence, sensor pitch, misalignment, vertex term neglected, optics imperfections
@@ -21,36 +26,30 @@ The protons' kinematics is first reconstructed separately in each arm, using for
 	\end{aligned}
 \end{equation}
 where the N and F subscripts refer to the near and far units, $x$ and $y$ to horizontal and vertical track hits (after alignment) and $v$ and $L$ stand for the magnification and effective length optical functions. This reconstruction is used for tagging elastic events, where the left and right arm protons are compared. Once an event is selected, all four RPs can be used to reconstruct the kinematics of the event, in addition optimising for angular resolution:
-\iffalse
-\begin{equation}
-\label{eq:kin 2a}
-	\begin{aligned}
-		\theta_x^* &= {
-				\sum {v_x^i}^2 \sum L_x^i x^i - \sum L_x^i v_x^i \sum v_x^i x^i
-				\over
-				\sum {v_x^i}^2 \sum {L_x^i}^2 - \sum L_x^i v_x^i \sum L_x^i v_x^i
-			}\ ,\\
-		%\theta_y^* &= (\theta_y^{*L} + \theta_y^{*R})/2\ .\\
-		\theta_y^* &= {1\over 4} \sum {y^i\over L_y^i}\ ,\\
-	\end{aligned}
-\end{equation}
-\fi
 \begin{equation}
 \label{eq:kin 2a}
 		\theta_x^* = {
 				\sum {v_x^i}^2 \sum L_x^i x^i - \sum L_x^i v_x^i \sum v_x^i x^i
 				\over
 				\sum {v_x^i}^2 \sum {L_x^i}^2 - \sum L_x^i v_x^i \sum L_x^i v_x^i
-			}\ ,
+			}\ ,\quad
 		\theta_y^* = {1\over 4} \sum {y^i\over L_y^i}\ ,
 \end{equation}
-where the sums go over the superscripts $i$ representing the four RPs of a diagonal.
+where the sums go over the superscripts $i$ representing the four RPs of a diagonal. Eventually, the full scattering angle, $\theta^*$, and four-momentum transfer squared, $t$, are calculated:
+
+\begin{equation}
+\label{eq:th t}
+\theta^* = \sqrt{{\theta_x^*}^2 + {\theta_y^*}^2}\ ,\quad t = - p^2 ({\theta_x^*}^2 + {\theta_y^*}^2)\ ,
+\end{equation}
+where $p$ denotes the beam momentum.
+
 
 %------------------------------
 
 \subsubsection{Alignment}
+\label{sec:alignment}
 
-The standard three-step procedure \cite{totem-ijmp} has been applied: collimator-like alignment prior to run, track-based alignment (relative among RPs) and alignment with elastic events (absolute with respect to the beam). The procedure has been further extended by steps improving the vertical alignment. They exploit the fact that the elastic scattering with its two anti-collinear protons can rely the alignment in the left and right arm (with an uncertainty of $20\un{\mu m}$). Furthermore, the horizontal RPs in the right arm recorded a hit distribution usable for vertical alignment in addition to the standard technique based on the vertical RPs. Together, the two methods reduce the uncertainty to about $70\un{\mu m}$. The horizontal alignment and rotation about the beam have been determined by the standard approach, with uncertainties $30\un{\mu m}$ and $2\un{m rad}$, respectively. Propagating the uncertainties to the reconstructed angles, Eq.~(\ref{eq:kin 2a}), gives $0.28\un{\mu rad}$ ($0.19\un{\mu rad}$) for horizontal (vertical) angle. The error of the RP rotations would bias the reconstructed $\theta_x^*$ by a term proportional to $\theta_y^*$, with the proportionality constant having standard deviation $0.005$.
+The standard three-step procedure \cite{totem-ijmp} has been applied: collimator-like alignment prior to run, track-based alignment (relative among RPs) and alignment with elastic events (absolute with respect to the beam). The procedure has been further extended by steps improving the vertical alignment. They exploit the fact that the elastic scattering with its two anti-collinear protons can relate the alignment in the left and right arm (with an uncertainty of $20\un{\mu m}$). Furthermore, the horizontal RPs in the right arm recorded a hit distribution usable for vertical alignment in addition to the standard technique based on the vertical RPs. Together, the two methods reduce the uncertainty to about $70\un{\mu m}$. The horizontal alignment and rotation about the beam have been determined by the standard approach, with uncertainties $30\un{\mu m}$ and $2\un{m rad}$, respectively. Propagating the uncertainties to the reconstructed angles, Eq.~(\ref{eq:kin 2a}), gives $0.28\un{\mu rad}$ ($0.19\un{\mu rad}$) for horizontal (vertical) angle. The error of the RP rotations would bias the reconstructed $\theta_x^*$ by a term proportional to $\theta_y^*$, with the proportionality constant having standard deviation $0.005$.
 
 % the observed hit inefficiencies -- possible asymmetries -- discuss ???
 % mention final alignment check = 2D Gaussian fit of $\theta_x^*$ vs.~$\theta_y^*$ from both diagonals ??
@@ -58,6 +57,7 @@ The standard three-step procedure \cite{totem-ijmp} has been applied: collimator
 %------------------------------
 
 \subsubsection{Optics}
+\label{sec:optics}
 
 The optics matching method \cite{totem-optics} has been applied. The residual uncertainty has a form of factors scaling the reconstructed scattering angles:
 % double-arm; 
@@ -67,6 +67,7 @@ $0.34\un{\%}$ (horizontal) and $0.25\un{\%}$ (vertical), including the effects o
 %------------------------------
 
 \subsubsection{Resolution}
+\label{sec:resolution}
 
 Good knowledge of statistical fluctuations in the event reconstruction is essential for several steps in differential cross-section evaluation.
 
@@ -91,7 +92,7 @@ where $\Delta t$ is the width of the bin, ${\cal N}$ is a normalisation factor a
 
 \subsubsection{Tagging}
 
-The cuts used to select the elastic events are summarized in Tab.~\ref{tab:cuts}, all are applied at $4\sigma$-level. Cuts 1 and 2 require the reconstructed-track collinearity between the left and right arm. Cut 3 ensures that the protons come from the same vertex (horizontally). Thanks to the very good resolution, the collinearity cuts are very strong and consequently the other possible cuts (cf.~\cite{epl101-el}) bring no significant improvement.
+The cuts used to select the elastic events are summarized in Table \ref{tab:cuts}, all are applied at $4\sigma$-level. Cuts 1 and 2 require the reconstructed-track collinearity between the left and right arm. Cut 3 ensures that the protons come from the same vertex (horizontally). Thanks to the very good resolution, the collinearity cuts are very strong and consequently the other possible cuts (cf.~\cite{epl101-el}) bring no significant improvement.
 
 The tagging efficiency has been studied by applying the cuts also at $5\un{\sigma}$-level. This selection has yielded $0.3\un{\%}$ more events, almost uniformly in $|t|$ \todo{(at very low $|t|$ in increases to $\approx 1\un{\%}$ -- anyway well in systematics)}. This kind of inefficiency is irrelevant for the presented analysis.
 
@@ -115,7 +116,7 @@ number & cut & RMS ($\equiv 1\sigma$)\cr\hline
 
 \subsubsection{Background}
 
-To study the background (i.e.~impurity of the tagging), the distributions of right-left angular differences (see Tab.~\ref{tab:cuts}) are plotted under various cut combinations. While the central part (signal) remains essentially constant, the tails (background) are dramatically affected. Interpolating the background smoothly to the signal region ($\pm 4\un{\sigma}$) permits to conclude negligible background: $1 - {\cal B} < 0.1\un{\%}$ (independently from $\theta_x^*$ and $\theta_y^*$ distributions). As an additional test, if a cut is released the recuperated events ($\approx 0.3\un{\%}$) are distributed almost uniformly over the $|t|$ range\todo{, except a small increase ($< 1.5\un{\%}$) at very low $|t|$ (anyway, well in within systematics)}.
+To study the background (i.e.~impurity of the tagging), the distributions of right-left angular differences (see Table \ref{tab:cuts}) are plotted under various cut combinations. While the central part (signal) remains essentially constant, the tails (background) are dramatically affected. Interpolating the background smoothly to the signal region ($\pm 4\un{\sigma}$) permits to conclude negligible background: $1 - {\cal B} < 0.1\un{\%}$ (independently from $\theta_x^*$ and $\theta_y^*$ distributions). As an additional test, if a cut is released the recuperated events ($\approx 0.3\un{\%}$) are distributed almost uniformly over the $|t|$ range\todo{, except a small increase ($< 1.5\un{\%}$) at very low $|t|$ (anyway, well in within systematics)}.
 
 % background = impurity of the cuts above
 
@@ -124,18 +125,16 @@ To study the background (i.e.~impurity of the tagging), the distributions of rig
 
 \subsubsection{Acceptance correction}
 
-Beyond the usual acceptance limitations -- sensor edge (relevant for low $|\theta^*_y|$) and LHC apertures (high $|\theta_y^*|$) -- two additional ones have been identified. Both stem from the horizontal RPs interfering with the elastic protons, resulting in phase space region with uncertain detection efficiency. Consequently, an additional acceptance restriction $-50 < \theta_x^* < 80\un{\mu rad}$ has been adopted to avoid the interference regions. \todo{give the same in millimetres}
+Beyond the usual acceptance limitations -- sensor edge (relevant for low $|\theta^*_y|$) and LHC apertures (high $|\theta_y^*|$) -- two additional ones have been identified. Both stem from the horizontal RPs interfering with the elastic protons, resulting in phase space region with uncertain detection efficiency. Consequently, an additional acceptance restriction $-50 < \theta_x^* < 80\un{\mu rad}$ has been adopted to avoid the interference regions. In far vertical RPs, the restriction corresponds to about $-2.3 < x < 3.7\un{mm}$.
 
-The expected azimuthal symmetry is verified for the data within acceptance. Assuming the symmetry globally yields a geometrical correction ${\cal A}_{\rm geom}(\theta^*)$ calculated from a fraction of circle with radius $\theta^*$ falling into the acceptance region in the $\theta_x^*$, $\theta_y^*$ space.
+The expected azimuthal symmetry is verified for the data within acceptance. Assuming the symmetry globally yields a geometrical correction ${\cal A}_{\rm geom}(\theta^*)$ calculated from a fraction of circle with radius $\theta^*$ falling into the acceptance region in the $\theta_x^*$, $\theta_y^*$ space. The value of the correction drops rapidly from $10$ at the lowest $|t|$ to about $2$ at $|t| = 0.04\un{GeV^2}$ and then increases slowly to about $10$ as $|t|$ tends to $0.2\un{GeV^2}$.
 
-The other acceptance correction, ${\cal A}_{\rm fluct}$, accounts for fluctuations around horizontal acceptance boundaries. \todo{How?} The uncertainties are related to the resolution parameters: vertical beam divergence size, left-right asymmetry and non-Gaussian shape.
+The other acceptance correction, ${\cal A}_{\rm fluct}$, accounts for fluctuations around horizontal acceptance boundaries. It is calculated analytically from the probability that any of the two elastic protons is pushed outside the acceptance due to the beam divergence. The beam divergence distribution is modelled as Gaussian with spread determined in Section~\ref{sec:resolution}. This correction contribution is only relevant for low $|t|$ (below $0.002\un{GeV^2}$ for diagonal 45 top -- 56 bottom) and is limited below $2.5$. The uncertainties are related to the resolution parameters. For the lowest $|t|$ bin they yield: vertical beam divergence size $2\un{\%}$, left-right asymmetry $1\un{\%}$ and non-Gaussian shape $1\un{\%}$.
 
 The final acceptance correction combines the two contributions:
 \begin{equation}
 {\cal A}(\theta^*, \theta_y^*) = {\cal A}_{\rm geom}(\theta^*)\ {\cal A}_{\rm fluct}(\theta_y^*)\ .
 \end{equation}
-
-\todo{quantitative information - how big is the correction, how important are the uncertainties}
 
 \iffalse
 \> A_g
@@ -155,12 +154,18 @@ The final acceptance correction combines the two contributions:
 
 \subsubsection{Inefficiency corrections}
 
-Any inefficiency correction that does not alter the $t$-distribution shape does not need to be considered in this analysis (e.g.~the pile-up inefficiency in \cite{prl111}). The uncorrelated 1-RP inefficiency ${\cal I}_{3/4}$ is evaluated by removing a given RP from the tagging cuts, Tab.~\ref{tab:cuts}, and calculating the fraction of recovered events. This fraction has been found depending gently on the vertical scattering angle: decreasing by about $0.4\un{\%}$ from the lowest to the highest $|\theta_y^*|$. The uncertainty of this dependence has been included in the final systematic uncertainty assessment. The 1-RP inefficiencies are complemented by inefficiencies ${\cal I}_{2/4}$ from proton interactions in the near RP affecting also the far one:
+Any inefficiency correction that does not alter the $t$-distribution shape does not need to be considered in this analysis (e.g.~the pile-up inefficiency in \cite{prl111}).
 
+The uncorrelated 1-RP inefficiency ${\cal I}_{3/4}$ is evaluated by removing a given RP from the tagging cuts, Table \ref{tab:cuts}, and calculating the fraction of recovered events. This fraction has been found depending gently on the vertical scattering angle: decreasing by about $0.4\un{\%}$ from the lowest to the highest $|\theta_y^*|$. The uncertainty of this dependence has been included in the final systematic uncertainty assessment.
+
+The 1-RP inefficiencies are complemented by near-far correlated inefficiencies ${\cal I}_{2/4}$ from proton interactions in the near RP affecting also the far one. This contribution is determined by counting events with corresponding shower signatures and is validated with a Monte-Carlo simulation.
+
+The full correction is calculated as
 \begin{equation}
 \label{efficiency}
-	{\cal E}(\theta_y^*) = {1\over 1 - \left( \sum\limits_{i\in \rm RPs} {\cal I}^i_{3/4}(\theta_y^*) + 2 {\cal I}_{2/4} \right) } \ .
+	{\cal E}(\theta_y^*) = {1\over 1 - \left( \sum\limits_{i\in \rm RPs} {\cal I}^i_{3/4}(\theta_y^*) + 2 {\cal I}_{2/4} \right) } \ ,
 \end{equation}
+where the first term in parentheses typically grows from about $16$ to $18\un{\%}$ from the lowest to the highest $|\theta_y^*|$ and the second term amounts to about $3\un{\%}$
 
 \iffalse
 \> 3-out-of-4 results
@@ -175,9 +180,6 @@ Any inefficiency correction that does not alter the $t$-distribution shape does 
 
 \fi
 
-\todo{how is 2/4 ineff calculated}
-
-\todo{Typical values or even a plot? What about uncertainties?}
 
 %-------------------------
 
@@ -205,53 +207,40 @@ The normalisation ${\cal N}$ is determined by requiring the same cross-section i
 
 \subsubsection{Binning}
 
-The binning has been optimised with respect to two aspects. At low $|t|$, the bin size has been set to the triple of the resolution in $t$. At higher $|t|$, a fixed statistical fluctuation of $4\un{\%}$ has been targeted. \todo{define low and hight $|t|$}
+The binning has been optimised with respect to two aspects. At low $|t|$ (below $0.11\un{GeV^2}$), the bin size has been set to the triple of the resolution in $t$. At higher $|t|$, a fixed statistical fluctuation of $4\un{\%}$ has been targeted. For $|t| > 0.16\un{GeV^2}$, a fixed bin size of $0.01\un{GeV^2}$ has been adopted in order to avoid excessively large bins.
 
 
 %-------------------------
 
 \subsubsection{Systematic uncertainties}
 
-Besides the systematic uncertainties mentioned at the above analysis steps, the uncertainty of the beam momentum $0.1\un{\%}$ needs to be considered when the scattering angles are translated to $t = - p^2 (\theta_x^2 + \theta_y^2)$. The systematic effects are propagated to the $t$-distribution by inserting the final cross-section to a Monte-Carlo simulation where any analysis parameter can be artificially biased. The results are validated with a semi-analytic calculation eventually exploiting numerical integration.
+Besides the systematic uncertainties mentioned at the above analysis steps, the uncertainty of the beam momentum $0.1\un{\%}$ needs to be considered when the scattering angles are translated to $t$, see Eq.~(\ref{eq:th t}). The systematic effects are propagated to the $t$-distribution by inserting the final cross-section to a Monte-Carlo simulation where any analysis parameter can be artificially biased. The results are validated with a semi-analytic calculation eventually exploiting numerical integration.
 
-\iffalse
-LIST
-alignment: x, y R, y D
-xy tilt
-optics: mode 1 and 2
-acceptance correction: beam div. unc., L-R assym., non-gauss
-3/4 efficiency
-beam mom
-unfolding - resolutions x, y and model dependence
-normalisation
-\fi
 
-%-------------------------
+%----------------------------------------------------------------------------------------------------
 
-\subsubsection{\todo{Cross checks}}
+\subsection{Systematic cross checks}
 
-Compatible results have obtained from data in the beginning of data-taking periods (after beam cleanings) and in their ends (before next beam cleaning was needed). \todo{add diagonal, bunch, ... comparisons}
+Compatible results have obtained from data originating from different bunches, different diagonals and different time periods -- in particular those right after and right before the beam cleanings.
+
 
 
 %----------------------------------------------------------------------------------------------------
 \subsection{Final data merging}
+\label{sec:final data merging}
 
 Eventually, the differential cross-section histograms from both diagonals are merged. This is accomplished by a per-bin weighted average, with the weight given by inverse squared statistical uncertainty. The statistical and systematic uncertainties are propagated accordingly. For the systematic ones, the correlation between the diagonals is taken into account. For example the vertical (mis)alignment of the RPs within one unit is almost fully correlated, thus the effect on differential cross-section is opposite in the two diagonals and consequently its impact is strongly reduced once the diagonals are merged.
 
-A summary and comparison of all systematic uncertainties is given in Fig.~\ref{fig:syst unc}. The leading ones are: normalisation uncertainty, optics imperfections, beam momentum offset and residual misalignment, their effect is quantified in Tab.~\ref{tab:data}. The vertical misalignment is the dominant systematic mode in the very low $|t|$ region. \todo{Give here the recipe to recover covariance matrix? This would leave more space on the table page.}
+The final cross-section is tabulated in Table \ref{tab:data} and visualised in Figure \ref{fig:dsdt}. The figure clearly shows a rapid cross-section rise below $|t| \lesssim 0.002\un{GeV^2}$, which will later be interpreted as an effect due to electromagnetic interaction.
 
-The final cross-section is tabulated in Tab.~\ref{tab:data} and visualised in Fig.~\ref{fig:dsdt}.
+The systematic uncertainties are summarised in Figure \ref{fig:syst unc} where their impact on the differential cross-section is shown. The leading uncertainties include normalisation, optics imperfections, beam momentum offset and residual misalignment. The vertical misalignment is the dominant systematic effect in the very low $|t|$ region. The leading uncertainties are quantified in Table \ref{tab:data} and can be used to approximate the covariance matrix of systematic uncertainties:
+\begin{equation}
+\label{eq:covar mat}
+\mat V = \sum \vec v_i \vec v_i^{\rm T}\ ,
+\end{equation}
+where $\vec v_i$'s represent the uncertainty vectors from the table.
 
 
-\begin{figure*}
-\begin{center}
-\includegraphics[width=18cm]{fig/systematic_uncertainties.pdf}
-\caption{%
-\todo{\todo{TODO: rename contributions to make them consistent among text, table and this figure; explain properly what needs to be abbreviated; then, shorten explications in the data table}. \todo{normalisation skipped as it is too big}}
-}
-\label{fig:syst unc}
-\end{center}
-\end{figure*}
 
 
 \input data_table.tex
@@ -263,9 +252,20 @@ The final cross-section is tabulated in Tab.~\ref{tab:data} and visualised in Fi
 \includegraphics[width=18cm]{fig/t_dist_tabulation.pdf}
 \vskip-3mm
 \caption{%
-Differential cross-section from Tab~\ref{tab:data} with statistical (bars) and systematic uncertainties (bands). The blue band represents all systematic uncertainties, the yellow one all but normalisation. LEFT: a low-$|t|$ zoom of the differential cross-section, with the rise due to the Coulomb interaction clearly visible. RIGHT: differential cross-section over the full $|t|$ range plotted relative to a reference exponential.
+Differential cross-section from Table \ref{tab:data} with statistical (bars) and systematic uncertainties (bands). The blue band represents all systematic uncertainties, the yellow one all but normalisation. LEFT: a low-$|t|$ zoom of the differential cross-section, with the rise due to the Coulomb interaction clearly visible. RIGHT: differential cross-section over the full $|t|$ range plotted relative to a reference exponential.
 }
 \label{fig:dsdt}
 \end{center}
 \end{figure*}
 
+
+\begin{figure*}
+\begin{center}
+\includegraphics[width=18cm]{fig/systematic_uncertainties.pdf}
+\caption{%
+Overview of the systematic uncertainties (except normalisation). The two contributions due to optics correspond to the two eigenvectors of the $\theta_x^*$, $\theta_y^*$ scaling covariance matrix.
+The plots quantify the impact of the systematic uncertainties on differential cross-section. LEFT: full $|t|$ range, RIGHT: low $|t|$ zoom. The vertical axis gives the relative variation of differential cross-section.
+}
+\label{fig:syst unc}
+\end{center}
+\end{figure*}
