--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -41,13 +41,13 @@ hour until the beam-to-collimator gap was refilled by diffusion, as
 diagnosed by the increasing RP trigger rate (Figure~\ref{fig:overview}, top). As soon as the background conditions
 had deteriorated to an unacceptable level, the beam cleaning procedure as described above was repeated, again followed by a quiet data-taking period.
 This entire sequence was iterated 6 times until the luminosity had degraded 
-from initially $2\times10^{27}\,\rm cm^{-2}s^{-1}$ to 
-$0.5\times10^{27}\,\rm cm^{-2}s^{-1}$ \todo{(check!)} % mean value from data: 19.8E3 mb^-1 / 17 772 s ~ 1 mb^-1 s^-1 = 10^27 cm^-2 s^-1
+from initially $1.8\times10^{27}\,\rm cm^{-2}s^{-1}$ to 
+$0.4\times10^{27}\,\rm cm^{-2}s^{-1}$ %\todo{(check!)} % mean value from data: 19.8E3 mb^-1 / 17 772 s ~ 1 mb^-1 s^-1 = 10^27 cm^-2 s^-1
 at which point the data yield was considered as too low. 
-During the 9 hour long fill, an integrated luminosity of $27\,\rm \mu b^{-1}$ 
-\todo{($19.8$ used in data analysis)} has been  
-accumulated, split into 6 data sets corresponding to the calm periods between
-the cleaning operations. 
+During the 9 hour long fill, an integrated luminosity of $20\,\rm \mu b^{-1}$ 
+% $27\,\rm \mu b^{-1}$ 
+has been accumulated, split into 6 data sets corresponding to the calm periods 
+between the cleaning operations. 
 
 Due to an anti-collision protection system the top and the bottom pots of a 
 vertical RP unit could not approach each other close enough to be both at a 
@@ -64,7 +64,9 @@ trigger (activity in either arm of T1 or T2), double-arm proton trigger
 (coincidence of any RP left of IP5 and any RP right of IP5) and zero-bias trigger
 (random bunch crossings) for calibration purposes.
 
-\todo{190k (162k) elastic events tagged in close (far) diagonal}.
+In the close and distant diagonals a total of 190k and 162k elastic events have
+been tagged, respectively.
+%\todo{190k (162k) elastic events tagged in close (far) diagonal}.
 
 
 \begin{figure*}
